# pyproject-skeleton

./: .env_template  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
scripts/: setup_env.sh
tests/: test_module1.py
